--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ could contribute:
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
+  <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
   <!-- <ul> -->
   <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
   <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
