--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+    This spring will join the new <b>Max Planck Institute for Cyber Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
+    in Bochum, Germany as a tenured faculty member.
+  </li>
+
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a> for <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a></b>
   <!-- <ul> -->
   <!-- <li>Conference: 25-28 June 2019, Stevens Institute of Technology, Hoboken, NJ, USA</li> -->
