--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@ could contribute:
     in Bochum, Germany as a tenured faculty member.
   </li>
 
+  <li style="margin-bottom: 1ex;">
+    <a href="https://kenji.maillard.blue/">Kenji Maillard</a> has successfully defended his
+      <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">PhD thesis</a> on 25 Nov 2019
+  </li>
+
+
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a> for <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a></b>
   <!-- <ul> -->
   <!-- <li>Conference: 25-28 June 2019, Stevens Institute of Technology, Hoboken, NJ, USA</li> -->
