--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://kenji.maillard.blue/">Kenji Maillard</a> has successfully defended his
-      <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">PhD thesis</a> on 25 Nov 2019
+    <b><a href="https://kenji.maillard.blue/">Kenji Maillard</a></b> has successfully defended his
+      <b><a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">PhD thesis</a></b> on 25 Nov 2019
   </li>
 
 
