--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020 and 2021</a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and 2021</b> (PC member)
   <ul>
-  <li><b>Submission deadlines(!): 7 February 2020, 8 May 2020, 2 October 2020, and early February 2021</b></li>
+  <li><b>Submission deadlines(!): 7 February 2020, 8 May 2020, 2 October 2020, ... <!-- and early February 2021 --></b></li>
   <li>Conference (CSF 2020): June 2020, Boston, MA, USA</li>
   <li>Conference (CSF 2021): June 2021, Dubrovnik, Croatia</li>
   </ul>
