--- a/index.html
+++ b/index.html
@@ -700,6 +700,13 @@ young researchers, and engineers:
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP 2020</em></a>
+
+    <ul style="font-size: small">
+      <li>Program Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>The Next 700 Relational Program Logics</em></a>
 
     <ul style="font-size: small">
