--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    This spring I will join the new <b>Max Planck Institute for <!-- Cyber --> Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
+    On May 1, 2020 I will join the new <b>Max Planck Institute for Cyber Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
     in Bochum, Germany as a tenured faculty member.
   </li>
 
