--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a> (PC member)
   <!-- <ul> -->
   <!-- <\!-- <li>Submission deadline: 21 May 2019</li> -\-> -->
   <!-- <li>Conference: 8-11 October 2019, Porto, Portugal</li> -->
   <!-- </ul> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a> (PC member)
   <!-- <ul> -->
   <!-- <li>Abstract deadline: 15 April 2019</li> -->
   <!-- <li>Submission deadline: 22 April 2019</li> -->
