--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 16 October 2019</li> -->
   <!-- <li>Submission deadline: 21 October 2019</li> -->
-  <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li>
+  <!-- <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li> -->
   <li>Conference: January 2021, Copenhagen, Denmark</li>
   </ul>
   </li>
