--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School 2019</a>
+  <!-- <ul> -->
+  <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
+  <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
+  <!-- </ul> -->
+  </li>
+
+
   <li style="margin-bottom: 1ex;"><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a> (PC member)
   <!-- <ul> -->
   <!-- <\!-- <li>Submission deadline: 21 May 2019</li> -\-> -->
