--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for Italian PhD students, Bertinoro, Italy, 2020</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School<br/>for Italian PhD students, Bertinoro, Italy, 2020</a>
   <!-- <ul> -->
   <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
   <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
