--- a/index.html
+++ b/index.html
@@ -164,20 +164,20 @@ could contribute:
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a> (PC member)
-  <!-- <ul> -->
-  <!-- <\!-- <li>Submission deadline: 21 May 2019</li> -\-> -->
-  <!-- <li>Conference: 8-11 October 2019, Porto, Portugal</li> -->
-  <!-- </ul> -->
-  <!-- </li> -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://www.react.uni-saarland.de/rv2019/"><\!-- International Conference on  -\->Runtime Verification, RV 2019</a> (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <\\!-- <li>Submission deadline: 21 May 2019</li> -\\-> -\-> -->
+  <!-- <\!-- <li>Conference: 8-11 October 2019, Porto, Portugal</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- <\!-- </li> -\-> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a> (PC member)
-  <!-- <ul> -->
-  <!-- <li>Abstract deadline: 15 April 2019</li> -->
-  <!-- <li>Submission deadline: 22 April 2019</li> -->
-  <!-- <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a> (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>Abstract deadline: 15 April 2019</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 22 April 2019</li> -\-> -->
+  <!-- <\!-- <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
   <!-- <ul> -->
