--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ could contribute:
     in Bochum, Germany as a tenured faculty member.
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair) and <!--a href=""-->2021<!--/a--> (Conference &amp; PC Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> and <!--a href=""-->2021<!--/a--> (Conference &amp; PC Co-Chair)</b>
   <ul>
   <!-- <li>Abstract deadline: 16 October 2019</li> -->
   <!-- <li>Submission deadline: 21 October 2019</li> -->
