--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (Conference &amp; PC Co-Chair)</b>
   <ul>
-  <!-- <li>Abstract deadline: 16 October 2019</li> -->
-  <!-- <li>Submission deadline: 21 October 2019</li> -->
+  <li>Abstract deadline: 16 September 2020</li>
+  <li>Submission deadline: 22 September 2020</li>
   <!-- <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li> -->
   <li>Conference: January 2021, Copenhagen, Denmark</li>
   </ul>
