--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and 2021</b> (PC member)
   <ul>
   <li><b>Submission deadlines(!): 8 May 2020, 2 October 2020, ... <!-- and early February 2021 --></b></li>
-  <li>Conference (CSF 2020): June 2020, <strike>Boston, MA, USA</strike>online</li>
+  <li>Conference (CSF 2020): June 2020, <strike>Boston, MA, USA</strike> Online</li>
   <li>Conference (CSF 2021): June 2021, Dubrovnik, Croatia</li>
   </ul>
   </li>
