--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and 2021</b> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a></b> (PC member)
   <ul>
   <li><b>Submission deadlines(!): 8 May 2020, 2 October 2020, ... <!-- and early February 2021 --></b></li>
   <li>Conference (CSF 2020): June 2020, <strike>Boston, MA, USA</strike> Online</li>
