--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
   <ul>
-  <li>Seminar: 10-15 May, 2020, Schloss Dagstuhl, Germany</li>
+  <li>Seminar: <strike>10-15 May, 2020</strike>2021?, Schloss Dagstuhl, Germany</li>
   </ul>
   </li>
 
