--- a/index.html
+++ b/index.html
@@ -709,8 +709,8 @@ young researchers, and engineers:
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security, CS @ Max Planck Open House</em></a>
 
     <ul style="font-size: small">
-      <li>: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
-    </ul><b>Recent:</b> <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.mp4">video</a> (2020-04-03)
+      <li><b>Recent:</b> <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.mp4">video</a> (2020-04-03)</li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP 2020</em></a>
