--- a/index.html
+++ b/index.html
@@ -706,10 +706,10 @@ young researchers, and engineers:
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Formally Verified Security, CS @ Max Planck Open House</em></a>
+  <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.mp4">video</a> (2020-04-03)</li>
+      <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.mp4">video</a> (2020-04-03)</li>
     </ul>
   </li>
 
