--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
 <p style="width:42em; text-align: left">
-<!-- Starting in October 2013 -->
+Tenured faculty member and head of the Formally Verified Security group at the
+new <b>Max Planck Institute for Cyber Security and Privacy
+(<a href="https://mpi-sp.org">MPI-SP</a>)</b> in Bochum, Germany.
+</p>
+
+<p style="width:42em; text-align: left">
+Between October 2013 and April 2020 I was a 
 Researcher (tenured, <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">chargé de recherche</a>)
 at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
-in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
+in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>
+(now on leave; fr: "mise en disponibilité").</p>
 
 <p style="width:42em; text-align: left">
 <!-- Between May 2011 and  -->
@@ -119,7 +126,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    On 1 May 2020 I will join the new <b>Max Planck Institute for Cyber Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
+    On 1 May 2020 I joined the new <b>Max Planck Institute for Cyber Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
     in Bochum, Germany as a tenured faculty member.
   </li>
 
