--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
 <p style="width:42em; text-align: left">
-Tenured faculty member and head of the Formally Verified Security group at the
-new <b>Max Planck Institute for Cyber Security and Privacy
+Tenured faculty member and head of the Formally Verified Security group at the new<br/>
+<b>Max Planck Institute for Cyber Security and Privacy
 (<a href="https://mpi-sp.org">MPI-SP</a>)</b> in Bochum, Germany.
 </p>
 
