--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Between October 2013 and April 2020 I was a
 Researcher (tenured, <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">chargé de recherche</a>)<br/>
 at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
 in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>
-(officially on leave; fr: "mise en disponibilité").</p>
+(now officially on leave; fr: "mise en disponibilité").</p>
 
 <p style="width:42em; text-align: left">
 <!-- Between May 2011 and  -->
