--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p style="width:42em; text-align: left">
 Tenured faculty member and head of the Formally Verified Security group at the new<br/>
-<b>Max Planck Institute for Cyber Security and Privacy
+<b>Max Planck Institute for Security and Privacy
 (<a href="https://mpi-sp.org">MPI-SP</a>)</b> in Bochum, Germany.
 </p>
 
@@ -126,7 +126,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    On 1 May 2020 I joined the new <b>Max Planck Institute for Cyber Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
+    On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b>
     in Bochum, Germany as a tenured faculty member.
   </li>
 
