--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 <p style="width:42em; text-align: left">
 Tenured faculty member and head of the Formally Verified Security group at the new<br/>
-<b>Max Planck Institute for Security and Privacy
-(<a href="https://mpi-sp.org">MPI-SP</a>)</b> in Bochum, Germany.
+<a href="https://mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in Bochum, Germany.
 </p>
 
 <p style="width:42em; text-align: left">
