--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
 <p style="width:42em; text-align: left">
-<b>Tenured faculty member and head of the Formally Verified Security group</b> at the new<br/>
+<b>Tenured faculty member and head of the Formally Verified Security group</b> at the<br/>
 <a href="https://mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in Bochum, Germany.
 </p>
 
