--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, 8-13 March 2020</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a>
   <!-- <ul> -->
   <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
   <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
@@ -410,15 +410,15 @@ could contribute:
 
 <h2 id="contact">Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
-<p><i>Current address:</i>
-  <a href="https://www.google.com/maps/place/Rue+Simone+IFF,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a> (<a href="https://www.inria.fr/en/centre/paris/overview/how-to-reach-us">How to reach us</a>)</p>
-<p><i>Equivalent Address (address above is so new that mapping applications might not know it):</i><br/>
-  <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
-<p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
-<p><i>Postal address:</i>
-<a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>,
-Centre de Recherche Inria de Paris,<br/>
-2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12, France</p>
+<!-- <p><i>Current address:</i> -->
+<!--   <a href="https://www.google.com/maps/place/Rue+Simone+IFF,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a> (<a href="https://www.inria.fr/en/centre/paris/overview/how-to-reach-us">How to reach us</a>)</p> -->
+<!-- <p><i>Equivalent Address (address above is so new that mapping applications might not know it):</i><br/> -->
+<!--   <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p> -->
+<!-- <p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p> -->
+<!-- <p><i>Postal address:</i> -->
+<!-- <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, -->
+<!-- Centre de Recherche Inria de Paris,<br/> -->
+<!-- 2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12, France</p> -->
 
 
 <!--
