--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 <p style="width:42em; text-align: left">
 <b>Tenured faculty member and head of the Formally Verified Security group</b> at the<br/>
-<a href="https://mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in Bochum, Germany.
+<a href="https://mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
+<a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.
 </p>
 
 <p style="width:42em; text-align: left">
