--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
     On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b></br>
-    in Bochum, Germany as a Tenured Research Group Leader.
+    in Bochum, Germany as a Tenured Research Group Leader (W2).
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (Conference &amp; PC Co-Chair)</b>
