--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>
 
 <p style="width:42em; text-align: left">
 <!-- Between May 2011 and  -->
-Until September 2013 I was Research Associate at
+Until September 2013 I was a Postdoctoral Research Associate at
 the <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>,
 working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
@@ -525,7 +525,7 @@ young researchers, and engineers:
 </ul>
 
 <p>For a complete list of present and past members of my group please look <a href="group.html">here</a>.</p>
-
+2
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
 <p>For a complete list of my papers please look <a href="publications.html">here</a><!--<br/>-->
