--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ could contribute:
   <!--  <a href="https://github.com/QuickChick">code</a>) -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/micro-policies/micro-policies-coq">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a></li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://github.com/micro-policies/micro-policies-coq">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a></li> -->
 
 <!--  <li style="margin-bottom: 1ex;"><a href="https://www.darpa.mil/news-events/2017-04-10">DARPA SSITH</a>/HOPE: Advanced New Hardware Optimized for Policy Enforcement , A New HOPE -->
 <!-- ; a collaboration with <a href="http://www.draper.com/">Draper Labs</a>, <a href="https://dovermicrosystems.com/">Dover Microsystems</a>, <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>, <a href="https://www.pdx.edu/computer-science/">Portland State University</a>, and <a href="http://web.mit.edu/">MIT</a>. --></li>
