--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ could contribute:
     in Bochum, Germany as a Tenured Research Group Leader (W2).
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (Conference &amp; PC Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (Conference &amp; PC Co-Chair)</b>
   <ul>
   <li>Abstract deadline: 16 September 2020</li>
   <li>Submission deadline: 22 September 2020</li>
