--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ young researchers, and engineers:
     Éric Tanter, and
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
-    arXiv:1907.05320. To appear at ESOP 2020.
+    In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
     </ul>
