--- a/index.html
+++ b/index.html
@@ -532,6 +532,17 @@ young researchers, and engineers:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Maximilian Algehed,
+    Jean-Philippe Bernardy, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>.
+    arXiv:2005.04722. May 2020.
+    <ul style="font-size: small">
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Kenji Maillard,
     C&#259;t&#259;lin Hri&#539;cu,
     Exequiel Rivas, and
