--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ young researchers, and engineers:
   <li style="margin-bottom: 1ex;">
     Maximilian Algehed,
     Jean-Philippe Bernardy, and
-    C&#259;t&#259;lin Hri&#539;cu.
+    C&#259;t&#259;lin Hri&#539;cu.<br/>
     <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>.
     arXiv:2005.04722. May 2020.
     <ul style="font-size: small">
