--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ young researchers, and engineers:
     Maximilian Algehed,
     Jean-Philippe Bernardy, and
     C&#259;t&#259;lin Hri&#539;cu.<br/>
-    <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>.
+    <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
     arXiv:2005.04722. May 2020.
     <ul style="font-size: small">
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
