--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ young researchers, and engineers:
     <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
     arXiv:2005.04722. May 2020.
     <ul style="font-size: small">
-      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
+      <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
     </ul>
   </li>
 
