--- a/index.html
+++ b/index.html
@@ -543,18 +543,6 @@ young researchers, and engineers:
   </li>
 
   <li style="margin-bottom: 1ex;">
-    Kenji Maillard,
-    C&#259;t&#259;lin Hri&#539;cu,
-    Exequiel Rivas, and
-    Antoine Van Muylder.
-    <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
-    arXiv:1907.05244. To appear at POPL 2020.
-    <ul style="font-size: small">
-      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
     Carmine Abate,
     Roberto Blanco,
     Ștefan Ciobâcă,
@@ -565,8 +553,21 @@ young researchers, and engineers:
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
     In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
+    <b>Nominated for EATCS Award for the best ETAPS paper in theoretical computer science</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Kenji Maillard,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Exequiel Rivas, and
+    Antoine Van Muylder.
+    <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
+    PACMPL, 4(POPL):4:1–4:33, 2020.
+    <ul style="font-size: small">
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
     </ul>
   </li>
 
