--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ young researchers, and engineers:
     Exequiel Rivas, and
     Antoine Van Muylder.
     <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
-    PACMPL, 4(POPL):4:1–4:33, 2020.
+    PACMPL, 4(POPL):4:1–4:33, January 2020.
     <ul style="font-size: small">
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
     </ul>
@@ -580,9 +580,7 @@ young researchers, and engineers:
     Exequiel Rivas, and
     Éric Tanter.
     <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
-    To appear in <a href="https://icfp19.sigplan.org/">24th ACM
-    SIGPLAN International Conference on Functional Programming (ICFP)</a>,
-    August 2019.
+    PACMPL, 3(<a href="https://icfp19.sigplan.org/">ICFP</a>):104:1– 104:29, August 2019.
     <ul style="font-size: small">
       <li><a href="https://github.com/FStarLang/FStar/tree/dm4all/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization in Coq</a>
