--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ young researchers, and engineers:
     Exequiel Rivas, and
     Antoine Van Muylder.
     <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
-    PACMPL, 4(POPL):4:1–4:33, January 2020.
+    PACMPL, 4(<a href="https://popl20.sigplan.org/">POPL</a>):4:1–4:33, January 2020.
     <ul style="font-size: small">
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
     </ul>
