--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Nominated for EATCS Award for the best ETAPS paper in theoretical computer science</b> for
+  <li style="margin-bottom: 1ex;"><b>Nominated for
+       <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS paper in theoretical computer science</b> for
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
