--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Nominated for
-       <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS paper in theoretical computer science</b> for
+       <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b> for
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
