--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ young researchers, and engineers:
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
     In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
-    <b>Nominated for EATCS Award for the best ETAPS paper in theoretical computer science</b>.
+    <b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS paper in theoretical computer science</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
     </ul>
