--- a/publications.html
+++ b/publications.html
@@ -34,12 +34,10 @@
     Exequiel Rivas, and
     Éric Tanter.
     <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
-    To appear in <a href="https://icfp19.sigplan.org/">24th ACM
-    SIGPLAN International Conference on Functional Programming (ICFP)</a>,
-    August 2019.
+    PACMPL, 3(<a href="https://icfp19.sigplan.org/">ICFP</a>):104:1– 104:29, August 2019.
     <ul style="font-size: small">
-      <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
-      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
+      <li><a href="https://github.com/FStarLang/FStar/tree/dm4all/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization in Coq</a>
     </ul>
   </li>
 
