--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ young researchers, and engineers:
     <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     In <a href="https://web.stevens.edu/csf2019/index.html">32nd
-    IEEE Computer Security Foundations Symposium (CSF)</a>, June 2019.
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 256--271. June 2019.
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
