--- a/publications.html
+++ b/publications.html
@@ -50,8 +50,8 @@
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
-    To appear in <a href="https://web.stevens.edu/csf2019/index.html">32nd
-    IEEE Computer Security Foundations Symposium (CSF)</a>, June 2019.
+    In <a href="https://web.stevens.edu/csf2019/index.html">32nd
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 256--271. June 2019.
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
