--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ young researchers, and engineers:
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
-           In <a href="https://ccs2018.sigsac.org/">25th ACM Conference on Computer and Communications Security (CCS)</a>, October 2018.
+           In <a href="https://ccs2018.sigsac.org/">25th ACM Conference on Computer and Communications Security (CCS)</a>, pages 1351--1368, ACM. October 2018.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
       <li>A previous extended abstract was called
