--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,18 @@
 
   <li style="margin-bottom: 1ex;">
     Kenji Maillard,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Exequiel Rivas, and
+    Antoine Van Muylder.
+    <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
+    PACMPL, 4(<a href="https://popl20.sigplan.org/">POPL</a>):4:1--4:33, January 2020.
+    <ul style="font-size: small">
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Kenji Maillard,
     Danel Ahman,
     Robert Atkey,
     Guido Martinez,
