--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,23 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Carmine Abate,
+    Roberto Blanco,
+    Ștefan Ciobâcă,
+    Deepak Garg,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Marco Patrignani,
+    Éric Tanter, and
+    Jérémy Thibault.
+    <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
+    In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
+    <b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Kenji Maillard,
     C&#259;t&#259;lin Hri&#539;cu,
     Exequiel Rivas, and
