--- a/publications.html
+++ b/publications.html
@@ -402,7 +402,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol start="27" style="width:42em; text-align: left">
+<ol start="29" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu,
     Leonidas Lampropoulos,
@@ -462,13 +462,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="32" style="width:42em; text-align: left">
+<ol start="34" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="34" style="width:42em; text-align: left">
+<ol start="36" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#539;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -477,7 +477,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="35" style="width:42em; text-align: left">
+<ol start="37" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.<br/>
   <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
@@ -507,7 +507,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="36" style="width:42em; text-align: left">
+<ol start="38" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
@@ -556,7 +556,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="39" style="width:42em; text-align: left">
+<ol start="41" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#539;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -565,12 +565,23 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 
-<!-- <h3>Recent Drafts</h3> -->
-<!-- <ol start="40" style="width:42em; text-align: left"> -->
-<!-- </ol> -->
+<h3>Recent Drafts</h3>
+<ol start="42" style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">
+    Maximilian Algehed,
+    Jean-Philippe Bernardy, and
+    C&#259;t&#259;lin Hri&#539;cu.<br/>
+    <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
+    arXiv:2005.04722. May 2020.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
+    </ul>
+  </li>
+
+</ol>
 
 <h3>Informal Publications and Workshops</h3>
-<ol start="40" style="width:42em; text-align: left">
+<ol start="43" style="width:42em; text-align: left">
 
 
   <!-- <li style="margin-bottom: 1ex;"> -->
