--- a/publications.html
+++ b/publications.html
@@ -479,9 +479,16 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <h3>Editor</h3>
 <ol start="37" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-  Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.<br/>
+  Amal Ahmed, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Frank Piessens.<br/>
   <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
   (Dagstuhl Seminar 18201)</a></b>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
+
+  <li style="margin-bottom: 1ex;">
+  Jasmin Blanchette and C&#259;t&#259;lin Hri&#539;cu,
+  editors. <a href="http://dx.doi.org/10.1145/3372885">Proceedings of the 9th
+  ACM SIGPLAN International Conference on Certified Programs and Proofs, CPP
+  2020</a>, New Orleans, LA, USA, January 20-21, 2020. ACM, 2020.</li>
+
 </ol>
 
 <!-- <h3>Refereed Workshop Papers</h3> -->
@@ -507,7 +514,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="38" style="width:42em; text-align: left">
+<ol start="39" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
@@ -556,7 +563,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="41" style="width:42em; text-align: left">
+<ol start="42" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#539;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -566,7 +573,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 
 <h3>Recent Drafts</h3>
-<ol start="42" style="width:42em; text-align: left">
+<ol start="43" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     Maximilian Algehed,
     Jean-Philippe Bernardy, and
@@ -581,7 +588,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Informal Publications and Workshops</h3>
-<ol start="43" style="width:42em; text-align: left">
+<ol start="44" style="width:42em; text-align: left">
 
 
   <!-- <li style="margin-bottom: 1ex;"> -->
