--- a/publications.html
+++ b/publications.html
@@ -485,9 +485,9 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
   <li style="margin-bottom: 1ex;">
   Jasmin Blanchette and C&#259;t&#259;lin Hri&#539;cu,
-  editors. <a href="http://dx.doi.org/10.1145/3372885">Proceedings of the 9th
+  editors. <b><a href="http://dx.doi.org/10.1145/3372885">Proceedings of the 9th
   ACM SIGPLAN International Conference on Certified Programs and Proofs, CPP
-  2020</a>, New Orleans, LA, USA, January 20-21, 2020. ACM, 2020.</li>
+  2020</a></b>, New Orleans, LA, USA, January 20-21, 2020. ACM, 2020.</li>
 
 </ol>
 
