--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/SP2021/">42nd IEEE Symposium on Security and Privacy Certified Programs and Proofs (Oakland S&amp;P 2021</a> (PC Member)</b>
+  <ul>
+  <li>Submission deadlines: 4 June 2020, 3 September 2020, 3 December 2020</li>
+  <li>Conference: 23-27 May 2021</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a>
   <!-- <ul> -->
   <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
