--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
   <b><a href="https://www.ieee-security.org/TC/SP2021/">42nd IEEE Symposium on
-  Security and Privacy Certified Programs and Proofs<br/>(Oakland S&amp;P 2021</a>(PC Member)</b>
+  Security and Privacy Certified Programs and Proofs<br/>, Oakland S&amp;P 2021 (PC Member)</b>
   <ul>
   <li>Submission deadlines: 4 June 2020, 3 September 2020, 3 December 2020</li>
   <li>Conference: 23-27 May 2021</li>
