--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@ could contribute:
          for the best ETAPS 2020 paper in theoretical computer science for
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
-  <ul>
-  <li>Seminar: <strike>10-15 May, 2020</strike> 2021?, Schloss Dagstuhl, Germany</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;">
   <b><a href="https://www.ieee-security.org/TC/SP2021/">42nd IEEE Symposium on
-  Security and Privacy Certified Programs and Proofs<br/>, Oakland S&amp;P 2021 (PC Member)</b>
+  Security and Privacy Certified Programs and Proofs,<br/> Oakland S&amp;P 2021 (PC Member)</b>
   <ul>
   <li>Submission deadlines: 4 June 2020, 3 September 2020, 3 December 2020</li>
   <li>Conference: 23-27 May 2021</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
+  <ul>
+  <li>Seminar: <strike>10-15 May, 2020</strike> 2021?, Schloss Dagstuhl, Germany</li>
   </ul>
   </li>
 
