--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;">
-  <b><a href="https://www.ieee-security.org/TC/SP2021/">Symposium on Security and Privacy, Oakland S&amp;P 2021</a> (PC Member)</b>
+  <b><a href="https://www.ieee-security.org/TC/SP2021/">Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
   <ul>
   <li><b>Submission deadlines(!): 4 June 2020, 3 September 2020, 3 December 2020</b></li>
   <li>Conference: 23-27 May 2021</li>
