--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ could contribute:
 <h2 id="contact">Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
 <p><i>Address:</i>
-  <a href="https://www.google.com/maps/place/Universit%C3%A4tsstra%C3%9Fe+140,+44799+Bochum/">Universitätsstraße 140 44799 Bochum, Germany</a></p>
+  <a href="https://www.google.com/maps/place/Universit%C3%A4tsstra%C3%9Fe+140,+44799+Bochum/">Universitätsstraße 140, 44799 Bochum, Germany</a></p>
 
 
 <!--
