--- a/index.html
+++ b/index.html
@@ -541,7 +541,8 @@ young researchers, and engineers:
     Jean-Philippe Bernardy, and
     C&#259;t&#259;lin Hri&#539;cu.<br/>
     <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
-    arXiv:2005.04722. May 2020.
+    To appear in <a href="https://www.ieee-security.org/TC/CSF2021/">34nd
+    IEEE Computer Security Foundations Symposium (CSF)</a>, <!-- pages 256--271. --> June 2021.
     <ul style="font-size: small">
       <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
     </ul>
