--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ young researchers, and engineers:
   <li style="margin-bottom: 1ex;">
     Maximilian Algehed,
     Jean-Philippe Bernardy, and
-    C&#259;t&#259;lin Hri&#539;cu.<br/>
+    C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
     To appear in <a href="https://www.ieee-security.org/TC/CSF2021/">34nd
     IEEE Computer Security Foundations Symposium (CSF)</a>, <!-- pages 256--271. --> June 2021.
