--- a/index.html
+++ b/index.html
@@ -518,6 +518,10 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Engineer / Intern, MPI-SP)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP, starting 1 October)</li>
+
   <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a> (Starting Researcher Position, Inria Paris)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a> (Research Intern / Engineer, Inria Paris)</li>
