--- a/index.html
+++ b/index.html
@@ -522,6 +522,12 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
+</ul>
+
+I still closely collaborate with some of my former group members at Inria Paris:
+
+<ul style="width:42em; text-align: left">
+
   <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a> (Starting Researcher Position, Inria Paris)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a> (Research Intern / Engineer, Inria Paris)</li>
