--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ MPRI website</a>.</p>
 <h2 id="group">Research Group</h2>
 
 I am very fortunate to work with a group of outstanding students,
-young researchers, and engineers:
+starting researchers, and engineers:
 
 <ul style="width:42em; text-align: left">
 
