--- a/index.html
+++ b/index.html
@@ -502,8 +502,7 @@ MPRI website</a>.</p>
 
 <h2 id="group">Research Group</h2>
 
-I am very fortunate to work with a group of outstanding students,
-starting researchers, and engineers:
+I am very fortunate to work with a group of outstanding students and starting researchers<!-- , and engineers -->:
 
 <ul style="width:42em; text-align: left">
 
