--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Engineer / Intern, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
 </ul>
 
@@ -590,7 +590,7 @@ I still closely collaborate with some of my former group members at Inria Paris:
     Kenji Maillard,
     Danel Ahman,
     Robert Atkey,
-    Guido Martinez,
+    Guido Martínez,
     C&#259;t&#259;lin Hri&#539;cu,
     Exequiel Rivas, and
     Éric Tanter.
