--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ I received my PhD
 <!--(summa cum laude)-->
 from <a href="https://saarland-informatics-campus.de/en/forschung-research/">Saarland
 University</a> in Saarbrücken, Germany
-and recently also a Habilitation from <a href="https://www.di.ens.fr/">ENS Paris</a>.
+and recently also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Paris</a>.
 <!--  where I -->
 <!-- <\!-- was a member of -->
 <!-- the <a href="http://www.infsec.cs.uni-saarland.de/">Information -->
