--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ I still closely collaborate with some of my former group members at Inria Paris:
 
 </ul>
 
-<p>For a complete list of present and past members of my group please look <a href="group.html">here</a>.</p>
+<p>For a complete list of past members of my group please look <a href="group.html">here</a>.</p>
 
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
