--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@ I still closely collaborate with some of my former group members at Inria Paris:
     Carmine Abate,
     Roberto Blanco,
     Ștefan Ciobâcă,
+    Adrien Durier,
     Deepak Garg,
     C&#259;t&#259;lin Hri&#539;cu,
     Marco Patrignani,
