--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,7 @@
     Carmine Abate,
     Roberto Blanco,
     Ștefan Ciobâcă,
+    Adrien Durier,
     Deepak Garg,
     C&#259;t&#259;lin Hri&#539;cu,
     Marco Patrignani,
