--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ I still closely collaborate with some of my former group members at Inria Paris:
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Research Intern / Engineer, Inria Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://artagnon.com">Ramkumar Ramachandra</a> (Research Intern / Engineer, Inria Paris)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://artagnon.com">Ramkumar Ramachandra</a> (Research Intern / Engineer, Inria Paris)</li> -->
 
 </ul>
 
