--- a/index.html
+++ b/index.html
@@ -584,6 +584,7 @@ I still closely collaborate with some of my former group members at Inria Paris:
     PACMPL, 4(<a href="https://popl20.sigplan.org/">POPL</a>):4:1--4:33, January 2020.
     <ul style="font-size: small">
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
+      <li><a href="https://www.youtube.com/watch?v=2tgp6MGoR1U">Video of POPL presentation</a>
     </ul>
   </li>
 
